# airgap-qr-transfer-bar-code

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  build-core.bat  build-qt.bat  vcpkg.json
.github/workflows/: android-apk.yml
docs/: architecture.md  manual-feedback-resend.md  mvp-plan.md  protocol.md  scanner-mode-plan.md  testing.md
scripts/: android-pull-received.ps1  android-sender-smoke.ps1  android-smoke.ps1  package-windows.ps1  patch-qt-android-camera2.ps1  windows-receiver-smoke.ps1  windows-sender-smoke.ps1
src/app/: CMakeLists.txt  Main.qml  cimbar_payload.cpp  cimbar_payload.hpp  main.cpp  qr_image_provider.cpp  qr_image_provider.hpp  receive_controller.cpp  receive_controller.hpp  receive_frame_collector.cpp  receive_frame_collector.hpp  scanner_receive_controller.cpp  scanner_receive_controller.hpp  send_controller.cpp  send_controller.hpp  send_frame_builder.cpp  send_frame_builder.hpp  serial_port_reader.cpp  serial_port_reader.hpp  transfer_speed.hpp  video_frame_luminance.cpp  video_frame_luminance.hpp
src/app/android/: AndroidManifest.xml
src/core/: CMakeLists.txt  assembler.cpp  assembler.hpp  chunker.cpp  chunker.hpp  crc32.cpp  crc32.hpp  frame.cpp  frame.hpp  session.cpp  session.hpp  sha256.cpp  sha256.hpp
src/qr/: CMakeLists.txt  qr_adapter.cpp  qr_adapter.hpp  qr_cimbar_adapter.cpp  qr_cimbar_adapter.hpp  qr_libqrencode_adapter.cpp  qr_libqrencode_adapter.hpp  qr_mock_adapter.cpp  qr_mock_adapter.hpp  qr_zxing_adapter.cpp  qr_zxing_adapter.hpp
tests/app/: CMakeLists.txt  qr_loopback_tests.cpp  receive_frame_collector_tests.cpp  send_frame_builder_tests.cpp
tests/core/: CMakeLists.txt  core_flow_tests.cpp  frame_codec_tests.cpp  test_support.hpp
tests/qr/: CMakeLists.txt  qr_adapter_tests.cpp  qr_cimbar_adapter_tests.cpp
